# algorithms-and-data-structures

./: .gitignore  build.py  main.py  matrix.py  pyproject.toml
main_window/: alv.md  large_miltiplication.py  main_window.py  matrix_calculations.py  queue_stack.py  styles.css  tree_widget.py
